# self-evolving-code-repair-agent

./: .gitignore  Dockerfile  Dockerfile.defects4j  PUBLISH_MANIFEST.txt  README.md  SUBMISSION.md  environment.yml  pyproject.toml
artifacts/: README.md
code_repair_agent/: __init__.py  agent.py  d4j_benchmark.py  d4j_memory.py  d4j_test_sweep.py  deepseek_repair.py  defects4j.py  defects4j_runner.py  environment.py  evaluate.py  evolution.py  llm.py  memory_ablation_proof.py  real_benchmark.py  safe_patch.py  tasks.py
configs/: defects4j.yaml  defects4j_30.json  defects4j_chart1_tmp.json  defects4j_chart2_tmp.json  defects4j_chart3_tmp.json  defects4j_failed8_v16.json  defects4j_focus.json  defects4j_lang10_focus.json  defects4j_lang3_focus.json  defects4j_manifest.yaml  defects4j_smoke.json  failed8_quick.json  learning.yaml  models.yaml  resources.h200.yaml  resources.yaml  reward.json  rewards.yaml  task_manifest.yaml
docs/: REPRODUCIBILITY.md
outputs/: conda_eval_ablation_no_feedback_features.json  conda_eval_ablation_no_process_reward.json  conda_eval_ablation_reduced_test_budget.json  conda_eval_baseline_main.json  conda_eval_feedback_main.json  conda_eval_gold.json  conda_eval_learning_main.json  conda_eval_status.json  conda_eval_sympy.json  device_inventory.json  harness_status.json  harness_status_ablation_no_feedback_features.json  harness_status_ablation_no_process_reward.json  harness_status_ablation_reduced_test_budget.json  harness_status_baseline_main.json  harness_status_feedback_main.json  harness_status_gold_patch_smoke.json  harness_status_learning_main.json  harness_status_local_attempt.json  official_env_status.json  run_manifest.json  run_schedule.json  summary.json
repair_agent/: config.py  (+4 more)
(+323 files in other folders)
