[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "repair_agent"
version = "0.1.0"
description = "Self-Evolving Code Repair Agent with Agentic RL on SWE-bench Lite"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RL Homework Project"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.22",
    "torch>=2.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
]
swebench = [
    "swebench>=2.1",
    "docker>=6.0",
]
models = [
    "transformers>=4.30",
    "accelerate>=0.20",
]
all = [
    "repair_agent[dev,swebench,models]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["repair_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", ".git", "__pycache__", "homework1", "homework2", "homework3", "homework4", "submissions"]
